--- a/totobank/src/App.css
+++ b/totobank/src/App.css
@@ -13,18 +13,19 @@
   margin: 0 auto;
 }
 
-/* .nav-item {
+.nav-item {
   display: inline-block;
   padding: 0 10px;
   text-align: center;
   min-width: 80px;
   margin: 0 10px;
   line-height: 50px;
-} */
+} 
 
 .route {
-  margin-top: 50px;
+ 
   text-align: center;
+  padding-top: 10%;
 }
 
 form {
@@ -54,7 +55,7 @@ a {
   line-height: 1.4;
 }
 .section_sub1{
-  top: 20%;
+  top: 13%;
   font-size: 20px;
   line-height: 1.95;
   opacity: .7;
@@ -76,6 +77,11 @@ a {
   line-height: 1.95;
   opacity: .7;
 }
+.section_main_title {
+  font-size:40px;
+  line-height: 1.4;
+}
+
 .intro_cont {
   height: 750px;
   position: relative;
@@ -172,10 +178,12 @@ a {
   font-size: small;
   color: darkgray;
 }
-
+.store{
+  top:30%;
+}
 .bar {
   width: 100%;
-  height:30px;
+  height:20px;
   background-color: ghostwhite;
 }
 
